--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     We make GitHub workflows faster, smarter, and greener. Our AI optimizes CI/CD pipelines to reduce execution time and carbon footprint—
     so you ship code efficiently without extra
                 </h1>
-                <h1>effort.</h1>
+                <h1 style="font-family: solitreo;" class="text-5xl">effort.</h1>
             </div>
         </div>
         <div class="mt-70">
@@ -85,7 +85,7 @@
                 
                 <div class="max-w-sm bg-transparent border border-gray-200 rounded-lg shadow-sm dark:bg-transparent dark:border-gray-700">
                     <a href="#" class="flex justify-center mt-5">
-                        <img class="rounded-t-lg" src="/images/Frame 80.png" alt="" />
+                        <img class="rounded-t-lg" src="images/Frame 80.png" alt="" />
                     </a>
                     <div class="p-5">
                         <a href="#">
@@ -101,7 +101,7 @@
                 
                 <div class="max-w-sm bg-transparent border border-gray-200 rounded-lg shadow-sm dark:transparent dark:border-gray-700">
                     <a href="#" class="flex justify-center mt-5">
-                        <img class="rounded-t-lg" src="/images/Group 3004.png" alt="" />
+                        <img class="rounded-t-lg" src="images/Group 3004.png" alt="" />
                     </a>
                     <div class="p-5">
                         <a href="#">
@@ -129,7 +129,7 @@
         </div>
         <div class="mt-5 flex justify-center">
             <button id="button" class="px-5 py-2 rounded-lg mx-5 flex justify-center">
-                <img src="/images/icons8-github.svg" alt="">
+                <img src="images/icons8-github.svg" alt="">
                 <h1 class="text-black">Connect your GitHub account</h1>
             </button>
         </div>
