--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         </div>
 
     </div>
-    <div class="about h-210 bg-red-600 pt-30">
+    <div class="about h-210 bg-red-600 pt-30 flex justify-center">
         <div>
             <div class="w-full h-10 flex justify-center"><button class="px-5 py-2 rounded-full border-1 border-white mx-5  text-[#D3FFCA] bg-[#D3FFCA1A]">
                 About Optimizer
             </button></div>
-            <div class="w-full flex justify-center mt-8">
+            <div class="w-full flex mt-8">
                 <h1 class="w-8/12 text-5xl text-white">
                     We make GitHub workflows faster, smarter, and greener. Our AI optimizes CI/CD pipelines to reduce execution time and carbon footprint—
     so you ship code efficiently without extra
