--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <div class="w-full flex justify-center mt-8">
                 <h1 class="w-8/12 text-5xl text-white">
                     We make GitHub workflows faster, smarter, and greener. Our AI optimizes CI/CD pipelines to reduce execution time and carbon footprint—
-    so you ship code efficiently without extra
+    so you ship code efficiently without extra efforts
                 </h1>
-                <h1 style="font-family: solitreo;" class="text-5xl">effort.</h1>
+                <!-- <h1 style="font-family: solitreo;" class="text-5xl">effort.</h1> -->
             </div>
         </div>
         <div class="mt-70">
