--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p class="text-white">AI-powered analytics to transform your GitHub pipelines— 
                 track inefficiencies, reduce emissions, and deploy with precision</p>
         </div>
-        <div class="flex justify-center mt-3">
+        <div class="flex justify-center">
             <button class="px-5 py-2 rounded-full border-1 border-white mx-5 flex gap-2">
                 <img src="\" alt="">
                 <h1>Connect Github</h1>
